WIP on add create resource handler
Signed-off-by: Craig Perkins <cwperx@amazon.com>